--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.bugsnag:bugsnag-android-gradle-plugin:5+"
+        classpath "com.bugsnag:bugsnag-android-gradle-plugin:$versions.bugsnag"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
         classpath deps.google_play_services
         classpath deps.android_gradle_plugin
