--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // SDK:
     implementation project(':telnyx_rtc')
 
+    implementation 'com.github.davidmigloz:number-keyboard:3.0.0'
+
     implementation deps.webrtc
 
     implementation deps.gson
