--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
     configurations.all {
