--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -94,6 +94,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.txt'
 
+        buildConfigField ("double", "SDK_VERSION", versionName)
         buildConfigField "java.util.concurrent.atomic.AtomicBoolean", "IS_TESTING", "new java.util.concurrent.atomic.AtomicBoolean(false)"
     }
 
