--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -29,6 +29,9 @@ jobs:
       # 1
       - name: Checkout code
 
+      - name: Touch local properties
+        run: touch local.properties
+
       - uses: actions/checkout@v1
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
