--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -14,5 +14,8 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Touch local properties
+        run: touch local.properties
+
       - name: Unit tests
         run: ./gradlew test
