--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Touch local properties
-        run: touch local.properties
+        #  - name: Touch local properties
+      #   run: touch local.properties
 
       - name: Unit tests
         run: ./gradlew test
