--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,17 +59,15 @@ android {
 }
 
 String getUsername() {
-    def propFile = rootProject.file("./local.properties")
-    def properties = new Properties()
-    properties.load(new FileInputStream(propFile))
-    return properties['MOCK_USERNAME']
+    def usernameProperties = new Properties()
+    usernameProperties.load(new FileInputStream(rootProject.file("local.properties")))
+    return usernameProperties['MOCK_USERNAME']
 }
 
 String getPassword() {
-    def propFile = rootProject.file("./local.properties")
-    def properties = new Properties()
-    properties.load(new FileInputStream(propFile))
-    return properties['MOCK_PASSWORD']
+    def passwordProperties = new Properties()
+    passwordProperties.load(new FileInputStream(rootProject.file("local.properties")))
+    return passwordProperties['MOCK_PASSWORD']
 }
 
 dependencies {
