--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField ("String", "USERNAME", getUsername())
-        buildConfigField ("String", "PASSWORD", getPassword())
+        buildConfigField ("String?", "USERNAME", getUsername())
+        buildConfigField ("String?", "PASSWORD", getPassword())
     }
 
     buildTypes {
