--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -18,6 +18,13 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Grant execute permission for script
+        run: chmod +x ./scripts/update_properties.sh
+
+      - name: Print Login Params Values
+        run: |
+          bash ./scripts/update_properties.sh ${{ secrets.TELNYX_SIP_USER }} ${{ secrets.TELNYX_SIP_PASSWORD }}
+
       - name: Unit tests
         run: ./gradlew test
 
