--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,7 +5,8 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: gradle
+    directory: "/"
     schedule:
-      interval: "daily"
+      interval: daily
+    open-pull-requests-limit: 10
