--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -1,4 +1,4 @@
-name: Unit Test and Firebase Test Lab
+name: Firebase Test Lab
 
 on:
   push:
@@ -9,36 +9,6 @@ on:
       - main
 
 jobs:
-  # 1 Run unit tests
-  unit_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Update Username from Secrets
-        env:
-          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
-        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
-
-      - name: Add new line
-        run: echo -e "\n" >> ./local.properties
-
-      - name: Update Password from Secrets
-        env:
-          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" >> ./local.properties
-
-      - name: Clean
-        run: ./gradlew clean
-
-      - name: Unit tests
-        run: ./gradlew test
 
   # 1 Generate APKs so that we can install on Firebase Test Lab devices
   apk:
