--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("org.jetbrains.kotlinx:kover:0.4.2")
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.0"
         classpath "com.bugsnag:bugsnag-android-gradle-plugin:$versions.bugsnag"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
         classpath deps.google_play_services
@@ -19,6 +21,8 @@ buildscript {
     }
 }
 
+apply plugin: 'kover'
+
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
@@ -27,6 +31,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://jitpack.io" }
     }
 
