--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -6,10 +6,12 @@ plugins {
     id 'org.jetbrains.dokka'
     id 'maven-publish'
     id 'kotlin-android-extensions'
+    id 'io.gitlab.arturbosch.detekt'
 }
 
 apply plugin: 'maven-publish'
 apply plugin: "com.bugsnag.android.gradle"
+apply plugin: 'io.gitlab.arturbosch.detekt'
 
 def getVersionName = { ->
     return "0.0.25"
@@ -119,18 +121,36 @@ android {
         jvmTarget = '1.8'
     }
     testOptions {
-     /*   unitTests.all {
-            jacoco {
-                includeNoLocationClasses = true
-                jacoco.excludes = ['jdk.internal.*']
-            }
-        }*/
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
     sourceSets {
         test.manifest.srcFile "src/main/AndroidManifest.xml"
     }
+}
+
+detekt {
+    buildUponDefaultConfig = true // preconfigure defaults
+    allRules = false // activate all available (even unstable) rules.
+    config = files("$projectDir/config/detekt.yml") // point to your custom config defining rules to run, overwriting default behavior
+    baseline = file("$projectDir/config/baseline.xml") // a way of suppressing issues before introducing detekt
+
+    reports {
+        html.enabled = true // observe findings in your browser with structure and code snippets
+        xml.enabled = true // checkstyle like format mainly for integrations like Jenkins
+        txt.enabled = true // similar to the console output, contains issue signature to manually edit baseline files
+        sarif.enabled = true // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with Github Code Scanning
+    }
+}
+
+tasks.koverHtmlReport {
+    enabled = true                          // false to disable report generation
+    htmlReportDir.set(layout.buildDirectory.dir("my-reports/html-result"))
+}
+
+tasks.koverXmlReport {
+    enabled = true                          // false to disable report generation
+    xmlReportFile.set(layout.buildDirectory.file("my-reports/result.xml"))
 }
 
 dependencies {
