--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
       - name: set up JDK 1.8
         uses: actions/setup-java@v2.3.1
         with:
-          java-version: 1.8
+          distribution: 'zulu'
+          java-version: '11'
+
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
