--- a/compose_app/src/main/AndroidManifest.xml
+++ b/compose_app/src/main/AndroidManifest.xml
@@ -52,8 +52,14 @@
                 android:name="activity_class_name"
                 android:value="org.telnyx.webrtc.compose_app.MainActivity" />
         </service>
+
+        <service android:name="com.telnyx.webrtc.common.service.CallForegroundService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="phoneCall"
+            android:permission="android.permission.FOREGROUND_SERVICE_PHONE_CALL"
+            android:process=":call_service" />
         
-        <!-- Register the CallNotificationReceiver -->
         <receiver
             android:name="com.telnyx.webrtc.common.notification.CallNotificationReceiver"
             android:enabled="true"
