--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -173,7 +173,7 @@ dependencies {
     implementation deps.material
     implementation deps.constraint_layout
 
-    implementation "io.getstream:stream-webrtc-android:1.3.8"
+    implementation "com.telnyx.webrtc.lib:library:1.0.1"
 
     implementation deps.gson
     implementation deps.retrofit.runtime
