--- a/samples/xml_app/src/main/AndroidManifest.xml
+++ b/samples/xml_app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS"/>
-
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -49,6 +50,13 @@
                 android:name="activity_class_name"
                 android:value="org.telnyx.webrtc.xml_app.MainActivity" />
         </service>
+
+        <service android:name="com.telnyx.webrtc.common.service.CallForegroundService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="phoneCall|microphone"
+            android:permission="android.permission.FOREGROUND_SERVICE_PHONE_CALL"
+            android:process=":call_service" />
         
         <!-- Register the CallNotificationReceiver -->
         <receiver
