--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -82,7 +82,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.txt'
 
-        buildConfigField("double", "SDK_VERSION", versionName ?: "1.6.2")
+        buildConfigField("String", "SDK_VERSION", "\"${versionName ?: "1.6.2"}\"")
         buildConfigField "java.util.concurrent.atomic.AtomicBoolean", "IS_TESTING", "new java.util.concurrent.atomic.AtomicBoolean(false)"
     }
 
