--- a/telnyx_rtc/config/detekt.yml
+++ b/telnyx_rtc/config/detekt.yml
@@ -122,9 +122,9 @@ complexity:
     threshold: 60
   LongParameterList:
     active: true
-    functionThreshold: 6
-    constructorThreshold: 7
-    ignoreDefaultParameters: false
+    functionThreshold: 8
+    constructorThreshold: 9
+    ignoreDefaultParameters: true
     ignoreDataClasses: true
     ignoreAnnotatedParameter: []
   MethodOverloading:
