--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -16,7 +16,7 @@ android {
 }
 
 def getVersionName = { ->
-    return "1.6.0"
+    return "1.6.3"
 }
 
 def getArtifactId = { ->
@@ -82,7 +82,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.txt'
 
-        buildConfigField("double", "SDK_VERSION", versionName ?: "1.0")
+        buildConfigField("String", "SDK_VERSION", "\"${getVersionName()}\"" ?: "1.0")
         buildConfigField "java.util.concurrent.atomic.AtomicBoolean", "IS_TESTING", "new java.util.concurrent.atomic.AtomicBoolean(false)"
     }
 
