--- a/samples/xml_app/src/main/AndroidManifest.xml
+++ b/samples/xml_app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="org.telnyx.webrtc.xml_app.App"
         android:theme="@style/Theme.TelnyxAndroidWebRTCSDK">
         <activity
             android:name="org.telnyx.webrtc.xml_app.MainActivity"
