--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,8 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.suppressUnsupportedCompileSdk=34
+# Kapt configuration for Kotlin 1.7.10
+kapt.incremental.apt=false
+kapt.use.worker.api=true
 
 
