--- a/telnyx_common/build.gradle
+++ b/telnyx_common/build.gradle
@@ -6,17 +6,24 @@ plugins {
 
 android {
     namespace "com.telnyx.webrtc.common"
-    compileSdk 35
+    compileSdk 33
 
     defaultConfig {
         minSdk 23
-        targetSdk 34
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+                arguments += ["room.incremental": "true"]
+            }
+        }
     }
 
     buildTypes {
@@ -40,6 +47,19 @@ android {
     }
 }
 
+kapt {
+    correctErrorTypes = false
+    useBuildCache = false
+    javacOptions {
+        option("-Xmaxerrs", 500)
+    }
+    arguments {
+        arg("room.schemaLocation", "$projectDir/schemas")
+        arg("room.incremental", "true")
+        arg("room.expandProjection", "true")
+    }
+}
+
 dependencies {
 
     implementation deps.kotlin.stdlib
@@ -50,16 +70,16 @@ dependencies {
 
     implementation deps.gson
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'com.jakewharton.timber:timber:4.5.1'
-    api 'com.google.firebase:firebase-messaging-ktx:24.1.0'
+    api 'com.google.firebase:firebase-messaging-ktx:23.1.0'
 
     // Room database
-    implementation 'androidx.room:room-runtime:2.6.1'
-    implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.room:room-runtime:2.5.2'//2.4.2
+    implementation 'androidx.room:room-ktx:2.5.2'
+    kapt 'androidx.room:room-compiler:2.5.2'
 
 }
