--- a/.github/workflows/ui_tests.yml
+++ b/.github/workflows/ui_tests.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Clean Build
+        run: ./gradlew clean
+
       - name: Create local.properties
         run: |
           echo "TEST_SIP_USERNAME=${{ secrets.TEST_SIP_USERNAME }}" >> local.properties
